docker/pravega-docker/deploy/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: controller
  name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: controller
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/pravega-net: "true"
        io.kompose.service: controller
    spec:
      containers:
        - args:
            - controller
          image: pravega/pravega:latest
          name: controller
          ports:
            - containerPort: 9090
            - containerPort: 10080
          resources: {}
      restartPolicy: Always
status: {}
