docker/pravega-docker/deploy/segmentstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: segmentstore
  name: segmentstore
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: segmentstore
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/pravega-net: "true"
        io.kompose.service: segmentstore
    spec:
      containers:
        - args:
            - segmentstore
          image: pravega/pravega:latest
          name: segmentstore
          ports:
            - containerPort: 12345
          resources: {}
          volumeMounts:
            - mountPath: /pravega-lts
              name: pravega-lts-volume
      restartPolicy: Always
      volumes:
        - name: pravega-lts-volume
          persistentVolumeClaim:
            claimName: pravega-lts-volume
status: {}
