docker/pravega-docker/deploy/bookie1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: bookie1
  name: bookie1
spec:
  ports:
    - name: "3181"
      port: 3181
      targetPort: 3181
  selector:
    io.kompose.service: bookie1
status:
  loadBalancer: {}
