docker/pravega-docker/deploy/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: controller
  name: controller
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
    - name: "10080"
      port: 10080
      targetPort: 10080
  selector:
    io.kompose.service: controller
status:
  loadBalancer: {}
