docker/pravega-docker/deploy/segmentstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: segmentstore
  name: segmentstore
spec:
  ports:
    - name: "12345"
      port: 12345
      targetPort: 12345
  selector:
    io.kompose.service: segmentstore
status:
  loadBalancer: {}
