docker/pravega-docker/deploy/pravega-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pravega-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/pravega-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pravega-net: "true"
